# traveltide_project

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
config/: ml_config.yaml  non_ml_config.yaml
data/sql/: cancel_trip.sql  elena_cohort.sql  sessions_not_canceled_trips.sql  user_behavior_features.sql
notebooks/features/: user_metrics.ipynb
notebooks/preparing_data/: eda.ipynb  load_data.ipynb  session_cleaner.ipynb
notebooks/segments/comparison/: comparison.ipynb
notebooks/segments/ml_model/: ml_cluster_analyzer.ipynb
notebooks/segments/non_ml/: analysez.ipynb  non_ml_segmentation.ipynb
notebooks/tests/: classifier_test.ipynb  perk_ab_test.ipynb
reports/docs/: presentation_traveltide_rewards.pptx
reports/segment/comparison/: comparison_results.csv
src/: __init__.py  db.py  utils.py
src/core/: __init__.py
src/core/features/: __init__.py  features_helpers.py  user_advanced_metrics.py  user_behavior_metrics.py  user_feature_pipeline.py
src/core/processing/: __init__.py  eda.py  load_data.py  session_cleaner.py
src/core/segment/: __ini__.py
src/core/segment/comparison/: __init__.py  comparison_viz.py  segmentation_comparator.py
src/core/segment/ml_model/: __init__.py  cluster_balancer.py  clustering_orchestrator.py  data_exporter.py  dbscan_engine.py  feature_engineer.py  kmean_cluster.py  kmeans_engine.py  metrics_calculator.py  perk_assigner.py  simple_ml_clustering.py  visualizer.py
src/core/segment/non_ml/: __init__.py  advance_analyzer.py  analyzer.py  data_manager.py  metrics.py  non_machine_learning_segment.py  perk_assigner.py  threshold_manager.py  visualizer.py
src/core/segment/test/: __init__.py  ab_test_framework.py  classification_model_test.py  perk_assignment_test.py
