[metadata]
name = traveltide-project
version = 0.1.0
description = A data-driven dashboard and analytics project for travel session insights
author = Guy Kaptue
author_email = guykaptue24@gmail.com
license = MIT
url = https://github.com/GuyKaptue/tts-mastery-project
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    pandas
    numpy
    sqlalchemy
    psycopg2-binary
    ipython
    jupyter
    scikit-learn
    xgboost
    lightgbm
    matplotlib
    seaborn
    plotly
    flask
    flask-cors
    flask_caching
    dash
    dash-bootstrap-components
    jinja2
    gunicorn
    pydantic
    python-dateutil
    openpyxl
    pyarrow
    tabulate
    loguru
    tqdm
    pytest
    flake8
    black
    python-dotenv
    configparser
    requests
    aiohttp
    geopandas
    matplotlib
    cartopy
    shapely

[options.packages.find]
where = src

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.venv

[tool:pytest]
testpaths = tests
